feat: can use user_id after token id extraction
