# controllers/note_controller.go
@@ -1,13 +1,13 @@
 package controllers
 
 import (
-	"log"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
 	"github.com/moneybackward/backend/models/dto"
 	"github.com/moneybackward/backend/services"
+	"github.com/rs/zerolog/log"
 )
 
 type NoteController interface {
@@ -31,24 +31,32 @@ func NewNoteController() NoteController {
 // @Summary Add a note
 // @Tags notes
 // @Accept json
-// @Param note body dto.NoteDTO true "Note"
+// @Param note body dto.NoteCreateDTO true "Note"
 // @Success 201 {object} models.Note
 // @Router /notes [post]
+// @Security BearerAuth
 func (noteCtrl *noteController) Add(ctx *gin.Context) {
-	var input dto.NoteDTO
+	userIdRaw, exists := ctx.Get("userId")
+	userId := userIdRaw.(uuid.UUID)
+	if !exists {
+		ctx.JSON(http.StatusUnauthorized, gin.H{"error": "User ID not found"})
+		return
+	}
+
+	var input dto.NoteCreateDTO
 	if err := ctx.ShouldBindJSON(&input); err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
-	if _, err := noteCtrl.userService.Find(input.UserId); err != nil {
+	if _, err := noteCtrl.userService.Find(userId); err != nil {
 		ctx.JSON(http.StatusNotFound, gin.H{"error": err.Error(), "message": "User not found"})
 		return
 	}
 
-	note, err := noteCtrl.noteService.Create(&input)
+	note, err := noteCtrl.noteService.Create(userId, &input)
 	if err != nil {
-		log.Panic(err)
+		log.Panic().Msg(err.Error())
 	}
 
 	ctx.JSON(http.StatusOK, gin.H{"data": note})
@@ -58,16 +66,18 @@ func (noteCtrl *noteController) Add(ctx *gin.Context) {
 // @Tags notes
 // @Success 201 {object} []models.Note
 // @Router /notes [get]
-// @Param user_id query string true "User ID"
+// @Security BearerAuth
 func (noteCtrl *noteController) List(ctx *gin.Context) {
-	var userId uuid.UUID
-	if ctx.Query("user_id") != "" {
-		userId = uuid.MustParse(ctx.Query("user_id"))
+	userIdRaw, exists := ctx.Get("userId")
+	userId := userIdRaw.(uuid.UUID)
+	if !exists {
+		ctx.JSON(http.StatusUnauthorized, gin.H{"error": "User ID not found"})
+		return
 	}
 
 	notes, err := noteCtrl.noteService.FindAll(userId)
 	if err != nil {
-		log.Panic(err)
+		log.Panic().Msg(err.Error())
 	}
 	ctx.JSON(http.StatusOK, gin.H{"data": notes})
 }
