# routes/v1/note.go
@@ -3,6 +3,7 @@ package v1
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/moneybackward/backend/controllers"
+	"github.com/moneybackward/backend/middlewares"
 )
 
 func RegisterNoteRoutes(router *gin.RouterGroup) {
@@ -12,8 +13,8 @@ func RegisterNoteRoutes(router *gin.RouterGroup) {
 
 	notes := router.Group("/notes")
 	{
-		notes.GET("", noteController.List)
-		notes.POST("", noteController.Add)
+		notes.GET("", middlewares.JwtAuthMiddleware(), noteController.List)
+		notes.POST("", middlewares.JwtAuthMiddleware(), noteController.Add)
 
 		notes.GET("/:note_id/categories", categoryController.List)
 		notes.POST("/:note_id/categories", categoryController.Add)
